--- a/Allan/app/src/main/res/layout/activity_content.xml
+++ b/Allan/app/src/main/res/layout/activity_content.xml
@@ -6,6 +6,9 @@
     android:background="#385780"
     tools:context=".ContentActivity">
 
-
+    <FrameLayout
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
